# internal/handlers/health_handler.go
@@ -1,0 +1,23 @@
+package handlers
+
+import (
+	"net/http"
+
+	"github.com/gin-gonic/gin"
+)
+
+// HealthCheck godoc
+//
+//	@Summary		健康检查
+//	@Description	获取服务状态
+//	@Description	Show the status of server.
+//	@Tags			health
+//	@Accept			*/*
+//	@Produce		json
+//	@Success		200	{object}	map[string]interface{}
+//	@Router			/health [get]
+func HealthCheck(c *gin.Context) {
+	c.JSON(http.StatusOK, gin.H{
+		"status": "UP",
+	})
+}
